--- a/grupominerosalmo/index.html
+++ b/grupominerosalmo/index.html
@@ -7,13 +7,152 @@
     <title>Grupo Minero Salmo</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="css/global-style.css" rel="stylesheet">
   </head>
   <body>
-	<header>
+	<header role="banner">
+		<div id="header">
+			<br/>
+			<img src="img/salmo-logo-medium.jpg" alt="Grupo Minero Salmo" class="logoCenter">
+			<br/>
+		</div>
+		<div id="navbar">
+			<div class="vertical-spacer-gold"></div>
+			<nav class="customNavbar navbar navbar-inverse">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					</div>
+					<div class="collapse navbar-collapse" id="main-navbar">
+						<ul class="nav navbar-nav navbar-left">
+							<li>
+								<a href="#">Inicio</a>
+							</li>
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" href="#"></span>Qui&eacute;nes Somos&nbsp;<span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#"><label>Misi&oacute;n</label></a></li>
+									<li><a href="#"><label>Visi&oacute;n</label></a></li>
+									<li><a href="#"><label>Gerencia</label></a></li>
+									<li><a href="#"><label>Historia</label></a></li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" href="#"></span>Operaciones&nbsp;<span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#"><label>Exploraci&oacute;n</label></a></li>
+									<li><a href="#"><label>Desarrollo</label></a></li>
+									<li><a href="#"><label>Minas Operando</label></a></li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" href="#"></span>Inversionistas<span class="caret"></span></a>
+								<ul class="dropdown-menu">
+								</ul>
+							</li>
+							<li>
+								<a href="#">Contacto</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<div class="vertical-spacer-gold"></div>
+		</div>
 	</header>
 	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<div id="carouselHome" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselHome" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselHome" data-slide-to="1"></li>
+						<li data-target="#carouselHome" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+							<img src="img/stones1.jpg" alt="Stones1" class="carouselMainImage"/>
+							<div class="carousel-caption">
+								<h3>Lugar 1</h3>
+								<p>Un grandioso lugar para ver</p>
+								<a class="btn btn-primary">Ver M&aacute;s</a>
+								<br/>
+							</div>
+						</div>
+						<div class="item">
+							<img src="img/stones2.jpg" alt="Stones2" class="carouselMainImage"/>
+							<div class="carousel-caption">
+								<h3>Lugar 2</h3>
+								<p>Otro grandioso lugar para ver</p>
+								<a class="btn btn-primary">Ver M&aacute;s</a>
+							</div>
+						</div>
+						<div class="item">
+							<img src="img/stones3.jpg" alt="Stones3" class="carouselMainImage"/>
+							<div class="carousel-caption">
+								<h3>Lugar 3</h3>
+								<p>Perfecto lugar para ver</p>
+								<a class="btn btn-primary">Ver M&aacute;s</a>
+							</div >
+						</div>
+					</div>
+					<br/>
+					<a class="left carousel-control" href="#carouselHome" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+					</a>
+					<a class="right carousel-control" href="#carouselHome" role="button" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+		<br/>
+		<div class="row">
+			<div class="col-sm-3">
+				<div class="well">
+				DESCRIPTION IN THE MIDDLE
+		COMPANY DESCRIPTION IN THE BOTTOM
+		//MORE CONTENT, NEWS, ETC...
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="well">
+				DESCRIPTION IN THE MIDDLE
+		COMPANY DESCRIPTION IN THE BOTTOM
+		//MORE CONTENT, NEWS, ETC...
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="well">
+				DESCRIPTION IN THE MIDDLE
+		COMPANY DESCRIPTION IN THE BOTTOM
+		//MORE CONTENT, NEWS, ETC...
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="well">
+				DESCRIPTION IN THE MIDDLE
+		COMPANY DESCRIPTION IN THE BOTTOM
+		//MORE CONTENT, NEWS, ETC...
+				</div>
+			</div>
+		
+		</div>
 	</div>
 	<footer>
+		<div id="footer">
+			<nav class="customNavbar navbar navbar-inverse">
+				<p class="footerContent navbar-text">
+				<span class="boldText">&copy;&nbsp;<script>document.write(new Date().getFullYear())</script>&nbsp;Grupo Minero Salmo S.A. de C.V.</span><br/>
+				<span class="fontSize14">Todos los derechos reservados</span><br/>
+				<span class="fontSize12">contacto@grupominerosalmo.com</span><br/>
+				</p>
+			</nav>
+		</div>
 	</footer>
 	<script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap-3.3.7.min.js"></script>
